added multiple files feature in comparison mode and randomizing arrays on different runs